@@ -2,6 +2,13 @@
 
 <news title="nginx news" link="/" lang="en">
 
+<event date="2011-10-01">
+<para>
+<a href="/en/download.xml">nginx-1.0.8</a>
+stable version has been released.<br/>
+</para>
+</event>
+
 <event date="2011-09-30">
 <para>
 <a href="/en/download.xml">nginx-1.0.7</a>
