@@ -23,6 +23,7 @@
 
 <download last="5" changes="CHANGES.ru-1.0">
 
+<item ver="1.0.8" pgp="yes" win="yes" />
 <item ver="1.0.7" pgp="yes" win="yes" />
 <item ver="1.0.6" pgp="yes" win="yes" />
 <item ver="1.0.5" pgp="yes" win="yes" />
