@@ -1,5 +1,5 @@
 <versions>
 <development> 1.1.4 </development>
-<stable> 1.0.7 </stable>
+<stable> 1.0.8 </stable>
 <legacy_stable> 0.8.55 </legacy_stable>
 </versions>
